[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/backgrounds/black_background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/components/hanged_man.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/DEADLY KILLERS.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Another Danger Slanted - Demo.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/components/rope.png" type="Texture" id=5]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/creepy-music-box-halloween-music-horror-scary-spooky-dark-ambient-118577.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 402, 488 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 402, 488 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 516, 326 )
scale = Vector2( 0.326625, 0.326625 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 512, 243 )
scale = Vector2( 0.908377, 0.908377 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 57.0
margin_top = 68.0
margin_right = 967.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "IS THERE A DEAD HANG MAN?"

[node name="Button" type="Button" parent="."]
margin_left = 319.0
margin_top = 469.0
margin_right = 445.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
text = "START"

[node name="Button2" type="Button" parent="."]
margin_left = 583.0
margin_top = 470.0
margin_right = 682.0
margin_bottom = 581.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
text = "EXIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="ready" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_ready"]
